--- a/Travel-Journal/src/index.css
+++ b/Travel-Journal/src/index.css
@@ -1,14 +1,34 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  /* line-height: 1.5;
-  font-weight: 400; */
-
+  font-family: "Inter", sans-serif;
 }
 
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: cadetblue;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F55A5A;
+  color: white;
+  padding: 16px 0;
+}
+
+.header-logo {
+  width: 24px;
+  height: 24px;
+  /* background-color: aqua; */
+  margin-right: 4px;
+}
+
+.header-title {
+  font-size: 14px;
+  font-weight: 500;
+  /* background-color: cadetblue; */
 }
